--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style src="styles.css"></style>
-    <title>Document</title>
+    <title>Form practice</title>
   </head>
   <body>
     <form>
