--- a/index.html
+++ b/index.html
@@ -3,24 +3,127 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style src="styles.css"></style>
-    <title>Form practice</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Document</title>
   </head>
   <body>
-    <form>
-      <label for="FirstName">Enter First Name</label><br />
-      <input type="text" name="FirstName" id="FirstName" required /><br />
-      <label for="MiddleName">Enter Middle Name</label><br />
-      <input type="text" name="MiddleName" id="MiddleName" /><br />
-      <label for="LastName">Enter Last Name</label><br />
-      <input type="text" name="LastName" id="LastName" required /><br />
+    <div class="externalBox">
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
 
-      <label for="email">Enter Email</label><br />
-      <input type="email" name="email" id="email" required /><br />
-      <label for="password">enter password</label><br />
-      <input type="password" name="password" id="password" required /><br />
-      <input type="submit" value="submit" /><br />
-    </form>
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+      <div class="internalForm">
+        <form>
+          <label for="FirstName">Enter First Name</label>
+          <input type="text" name="FirstName" id="FirstName" required /><br />
+          <label for="MiddleName">Enter Middle Name</label>
+          <input type="text" name="MiddleName" id="MiddleName" /><br />
+          <label for="LastName">Enter Last Name</label>
+          <input type="text" name="LastName" id="LastName" required /><br />
+
+          <label for="email">Enter Email</label>
+          <input type="email" name="email" id="email" required /><br />
+          <label for="password">enter password</label><br />
+          <input type="password" name="password" id="password" required />
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
+
