--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
    
       <div class="internalForm">
         <form>
-          <label for="FirstName">Enter First Name</label>
+          <label for="FirstName">Enter First Name</label><br />
           <input type="text" name="FirstName" id="FirstName" required /><br />
-          <label for="MiddleName">Enter Middle Name</label>
+          <label for="MiddleName">Enter Middle Name</label><br />
           <input type="text" name="MiddleName" id="MiddleName" /><br />
-          <label for="LastName">Enter Last Name</label>
+          <label for="LastName">Enter Last Name</label><br />
           <input type="text" name="LastName" id="LastName" required /><br />
 
-          <label for="email">Enter Email</label>
+          <label for="email">Enter Email</label><br />
           <input type="email" name="email" id="email" required /><br />
           <label for="password">enter password</label><br />
-          <input type="password" name="password" id="password" required />
+          <input type="password" name="password" id="password" required /><br />
           <input type="submit" value="submit" />
         </form>
       </div>
